checked every class and made some small adjustments for correctness